@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: amindexd.c,v 1.106 2006/07/25 18:27:57 martinea Exp $
+ * $Id: amindexd.c,v 1.106.2.1 2006/09/22 11:02:13 martinea Exp $
  *
  * This is the server daemon part of the index client/server system.
  * It is assumed that this is launched from inetd instead of being
@@ -295,7 +295,7 @@ printf_arglist_function1(static void reply, int, n, char *, fmt)
 	len = vsnprintf(reply_buffer, reply_buffer_size, fmt, args);
 	arglist_end(args);
 
-	if (len > -1 && (size_t)len < reply_buffer_size)
+	if (len > -1 && (size_t)len < reply_buffer_size-1)
 	    break;
 
 	reply_buffer_size *= 2;
@@ -334,7 +334,7 @@ printf_arglist_function1(static void lreply, int, n, char *, fmt)
 	len = vsnprintf(reply_buffer, reply_buffer_size, fmt, args);
 	arglist_end(args);
 
-	if (len > -1 && (size_t)len < reply_buffer_size)
+	if (len > -1 && (size_t)len < reply_buffer_size-1)
 	    break;
 
 	reply_buffer_size *= 2;
@@ -375,7 +375,7 @@ printf_arglist_function1(static void fast_lreply, int, n, char *, fmt)
 	len = vsnprintf(reply_buffer, reply_buffer_size, fmt, args);
 	arglist_end(args);
 
-	if (len > -1 && (size_t)len < reply_buffer_size)
+	if (len > -1 && (size_t)len < reply_buffer_size-1)
 	    break;
 
 	reply_buffer_size *= 2;
